# OpenCV_Proj1

./: README.md
OpenCV_Proj1/: CMakeLists.txt  DetectedColor.cpp  DetectedColor.h  FaceDetection.cpp  FaceDetection.h  HSV_Picker.cpp  HSV_Picker.h  PaperScanner.cpp  PaperScanner.h  RussianLP.cpp  RussianLP.h  main.cpp
